# boot.dev-static-site

./: .gitignore  README.md  main.sh  pyproject.toml  run_tests.sh
src/: gencontent.py  htmldode.py  htmlnode.py  inline_markdown.py  main.py  markdown_blocks.py  textnode.py
tests/: test_htmlnode.py  test_inline_markdown.py  test_markdown_blocks.py  test_textnode.py
